@@ -10,6 +10,9 @@ import com.toyproject.lineupproject.exception.GeneralException;
 import com.toyproject.lineupproject.repository.AdminPlaceMapRepository;
 import com.toyproject.lineupproject.repository.PlaceRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -43,24 +46,30 @@ public class PlaceService {
         }
     }
     @Transactional(readOnly = true)
-    public List<PlaceDto> getPlacesByEmail(String email) {
+    public Page<PlaceDto> getPlacesByAdmin(String email,Pageable pageable, Predicate predicate) {
         try {
-            Admin findUser = adminService.findUserByEmail(email);
-            List<AdminPlaceMap> all = adminPlaceMapRepository.findAllByAdmin(findUser);
-            return all.stream().map(a -> PlaceDto.of(a.getPlace()))
-                    .collect(Collectors.toList());
+            Page<AdminPlaceMap> all = adminPlaceMapRepository.findAll(predicate, pageable);
+            if (!all.isEmpty()) {
+                if (!all.getContent().get(0).getAdmin().getEmail().equals(email)) {
+                    throw new GeneralException(ErrorCode.BAD_REQUEST);
+                }
+            }
+            List<PlaceDto> placeDtos = all.getContent().stream()
+                    .map(a -> PlaceDto.of(a.getPlace())).toList();
+            return new PageImpl<>(placeDtos, all.getPageable(), all.getTotalElements());
         } catch (Exception e) {
             throw new GeneralException(ErrorCode.DATA_ACCESS_ERROR);
         }
     }
     @Transactional(readOnly = true)
-    public List<PlaceDto> getPlacesAll() {
+    public Page<PlaceDto> getPlacesAll(Predicate predicate, Pageable pageable) {
         try {
-            return StreamSupport.stream(
-                            placeRepository.findAll().spliterator(),
+            Page<Place> all = placeRepository.findAll(predicate, pageable);
+            List<PlaceDto> placeDtos = StreamSupport.stream(
+                            all.spliterator(),
                             false)
-                    .map(PlaceDto::of)
-                    .collect(Collectors.toList());
+                    .map(PlaceDto::of).toList();
+            return new PageImpl<>(placeDtos, all.getPageable(), all.getTotalElements());
         } catch (Exception e) {
             throw new GeneralException(ErrorCode.DATA_ACCESS_ERROR);
         }
